# ui-test-agent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  demo_complex_dashboard.html  demo_ecommerce.html  demo_login.html  pyproject.toml  requirements.txt
scenarios/: complex_dashboard_test.txt  demo_login.txt  demo_login.yml  ecommerce_test.txt  ecommerce_test.yml  login.yml
schemas/: login_response.json
scripts/: run_demo.sh
src/ui_test_agent/: __init__.py  adk_agent.py  adk_tools.py  cli.py  computer_use_agent.py  config.py  context_builder.py  dom_explorer.py  dom_indexer.py  dsl.py  dynamic_nl_agent.py  locators.py  nl_agent.py  oracle.py  playwright_ctx.py  reporting.py  runner.py  semantic_eval.py
